--- a/media-video/qdvdauthor/ChangeLog
+++ b/media-video/qdvdauthor/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-video/qdvdauthor
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/qdvdauthor/ChangeLog,v 1.22 2008/05/14 23:30:20 sbriesen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/qdvdauthor/ChangeLog,v 1.23 2008/06/08 22:59:38 sbriesen Exp $
+
+*qdvdauthor-1.2.0 (08 Jun 2008)
+
+  08 Jun 2008; Stefan Briesenick <sbriesen@gentoo.org>
+  +qdvdauthor-1.2.0.ebuild:
+  version bump, solves bug #218349.
 
   14 May 2008; Stefan Briesenick <sbriesen@gentoo.org>
   -qdvdauthor-1.0.0_rc3.ebuild:
