--- a/kde-misc/kate-symbolviewer-plugin/ChangeLog
+++ b/kde-misc/kate-symbolviewer-plugin/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-misc/kate-symbolviewer-plugin
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/kate-symbolviewer-plugin/ChangeLog,v 1.6 2008/04/28 15:58:07 phreak Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/kate-symbolviewer-plugin/ChangeLog,v 1.7 2008/06/09 01:14:18 carlo Exp $
+
+*kate-symbolviewer-plugin-1.11.0 (09 Jun 2008)
+
+  09 Jun 2008; Carsten Lohrke <carlo@gentoo.org>
+  +kate-symbolviewer-plugin-1.11.0.ebuild:
+  Version bump.
 
   28 Apr 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
   Remove Wulf C. Krueger (philantrop) from metadata.xml (as per #168573).
