--- a/sys-libs/ss/ChangeLog
+++ b/sys-libs/ss/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/ss
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/ss/ChangeLog,v 1.64 2008/06/08 12:13:10 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/ss/ChangeLog,v 1.65 2008/06/09 02:31:16 vapier Exp $
+
+  09 Jun 2008; Mike Frysinger <vapier@gentoo.org> ss-1.40.10.ebuild:
+  Use linker scripts like e2fsprogs #225297 by Mart Raudsepp.
 
   08 Jun 2008; nixnut <nixnut@gentoo.org> ss-1.40.9.ebuild:
   Stable on ppc wrt bug 225239
