--- a/dev-util/stgit/ChangeLog
+++ b/dev-util/stgit/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for dev-util/stgit
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/stgit/ChangeLog,v 1.26 2008/02/15 07:23:16 gregkh Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/stgit/ChangeLog,v 1.27 2008/06/09 07:43:45 ferdy Exp $
+
+*stgit-0.14.3 (09 Jun 2008)
+
+  09 Jun 2008; Fernando J. Pereda <ferdy@gentoo.org> -stgit-0.11.ebuild,
+  -stgit-0.12.ebuild, -stgit-0.12.1.ebuild, -stgit-0.12.1-r1.ebuild,
+  -stgit-0.13.ebuild, -stgit-0.14.ebuild, +stgit-0.14.3.ebuild:
+  Version bump. Remove old versions.
 
 *stgit-0.14.1 (15 Feb 2008)
 
