--- a/app-dicts/ispell-pt-br/ChangeLog
+++ b/app-dicts/ispell-pt-br/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-dicts/ispell-pt-br
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-dicts/ispell-pt-br/ChangeLog,v 1.5 2007/02/21 20:41:34 peper Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-dicts/ispell-pt-br/ChangeLog,v 1.6 2008/06/09 08:12:14 pva Exp $
+
+  09 Jun 2008; Peter Volkov <pva@gentoo.org> ispell-pt-br-2.4-r2.ebuild:
+  Added ~amd64 keyword, bug #223049
 
   21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
   Transition to Manifest2.
