--- a/media-gfx/potracegui/ChangeLog
+++ b/media-gfx/potracegui/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-gfx/potracegui
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/potracegui/ChangeLog,v 1.6 2007/12/28 00:09:43 dirtyepic Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/potracegui/ChangeLog,v 1.7 2008/06/09 08:17:52 loki_val Exp $
+
+  09 Jun 2008; Peter Alfredsen <loki_val@gentoo.org>
+  +files/potracegui-1.3.4-gcc43.patch, -potracegui-1.2.ebuild,
+  potracegui-1.3.4.ebuild:
+  Add gcc-4.3 patch, bug 225439, Marek Miller <mlm@shells.pl>
 
 *potracegui-1.3.4 (28 Dec 2007)
 
