--- a/app-office/qtstalker/ChangeLog
+++ b/app-office/qtstalker/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-office/qtstalker
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/qtstalker/ChangeLog,v 1.8 2008/03/14 14:23:55 phreak Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/qtstalker/ChangeLog,v 1.9 2008/06/09 08:46:01 loki_val Exp $
+
+  09 Jun 2008; Peter Alfredsen <loki_val@gentoo.org> ChangeLog:
+  Add patch for gcc-4.3.0, remove old. Closes bug #217671.
 
   14 Mar 2008; Christian Heim <phreak@gentoo.org> qtstalker-0.32.ebuild,
   qtstalker-0.33.ebuild:
