--- a/media-sound/alsa-patch-bay/ChangeLog
+++ b/media-sound/alsa-patch-bay/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/alsa-patch-bay
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-patch-bay/ChangeLog,v 1.25 2007/02/22 00:47:02 peper Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-patch-bay/ChangeLog,v 1.26 2008/06/09 10:38:02 loki_val Exp $
+
+  09 Jun 2008; Peter Alfredsen <loki_val@gentoo.org>
+  +files/alsa-patch-bay-1.0.0-gcc43.patch, alsa-patch-bay-1.0.0-r2.ebuild:
+  Gcc-4.3.0 fix; bug 218016; Thanks to terry lava <hackablecrap@hotmail.com>
 
   22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
   Transition to Manifest2.
