--- a/net-nntp/klibido/ChangeLog
+++ b/net-nntp/klibido/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-nntp/klibido
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-nntp/klibido/ChangeLog,v 1.25 2008/06/09 11:56:59 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-nntp/klibido/ChangeLog,v 1.26 2008/06/09 12:01:26 flameeyes Exp $
+
+  09 Jun 2008; Diego Pettenò <flameeyes@gentoo.org> klibido-0.2.5.ebuild:
+  Better to save the ebuild after modifying it.
 
   09 Jun 2008; Diego Pettenò <flameeyes@gentoo.org>
   +files/klibido-0.2.5+gcc-4.3.patch:
