--- a/app-pda/synce-kde/ChangeLog
+++ b/app-pda/synce-kde/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-pda/synce-kde
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-pda/synce-kde/ChangeLog,v 1.12 2007/02/21 22:59:41 peper Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-pda/synce-kde/ChangeLog,v 1.13 2008/06/09 12:50:46 flameeyes Exp $
+
+  09 Jun 2008; Diego Pettenò <flameeyes@gentoo.org>
+  +files/synce-kde-0.9.1+gcc-4.3.patch, synce-kde-0.9.1.ebuild:
+  Add patch to build with GCC 4.3. Thanks to Peter Alfredsen (loki_val) in
+  bug #219554.
 
   21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
   Transition to Manifest2.
