--- a/net-print/gnome-cups-manager/ChangeLog
+++ b/net-print/gnome-cups-manager/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-print/gnome-cups-manager
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-print/gnome-cups-manager/ChangeLog,v 1.73 2007/12/18 16:20:11 dang Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-print/gnome-cups-manager/ChangeLog,v 1.74 2008/06/09 13:05:14 flameeyes Exp $
+
+  09 Jun 2008; Diego Pettenò <flameeyes@gentoo.org>
+  +files/gnome-cups-manager-0.31+gcc-4.3.patch,
+  gnome-cups-manager-0.31-r2.ebuild:
+  Add patch from upstream to build with GCC 4.3. Thanks to Jose daLuz for
+  reporting and Arun Raghavan for providing the patches. Closes s bug
+  #225501.
 
   18 Dec 2007; Daniel Gryniewicz <dang@gentoo.org>
   gnome-cups-manager-0.31-r2.ebuild:
