--- a/sys-kernel/mm-sources/ChangeLog
+++ b/sys-kernel/mm-sources/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/mm-sources
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/mm-sources/ChangeLog,v 1.369 2008/05/14 14:21:26 voxus Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/mm-sources/ChangeLog,v 1.370 2008/06/09 13:57:49 voxus Exp $
+
+*mm-sources-2.6.26_rc5-r1 (09 Jun 2008)
+
+  09 Jun 2008; Konstantin V. Arkhipov <voxus@gentoo.org>
+  +mm-sources-2.6.26_rc5-r1.ebuild:
+  Version bump.
 
 *mm-sources-2.6.26_rc2-r1 (14 May 2008)
 
