--- a/media-sound/alsa-firmware/ChangeLog
+++ b/media-sound/alsa-firmware/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/alsa-firmware
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-firmware/ChangeLog,v 1.82 2008/05/13 14:56:18 chainsaw Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-firmware/ChangeLog,v 1.83 2008/06/09 14:06:01 armin76 Exp $
+
+  09 Jun 2008; Raúl Porcel <armin76@gentoo.org>
+  alsa-firmware-1.0.14.ebuild, alsa-firmware-1.0.15.ebuild,
+  alsa-firmware-1.0.16.ebuild:
+  Drop sparc keyword, no hardware to test
 
   13 May 2008; Steve Dibb <beandog@gentoo.org> alsa-firmware-1.0.16.ebuild:
   amd64 stable, bug 217075
