--- a/kde-base/kdeaccessibility-colorschemes/ChangeLog
+++ b/kde-base/kdeaccessibility-colorschemes/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/kdeaccessibility-colorschemes
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaccessibility-colorschemes/ChangeLog,v 1.9 2008/06/05 21:18:52 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaccessibility-colorschemes/ChangeLog,v 1.10 2008/06/09 14:52:47 keytoaster Exp $
+
+  09 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kdeaccessibility-colorschemes-4.0.2.ebuild,
+  -kdeaccessibility-colorschemes-4.0.3.ebuild:
+  Removed old versions.
 
 *kdeaccessibility-colorschemes-4.0.5 (05 Jun 2008)
 
