--- a/kde-base/kde-menu-icons/ChangeLog
+++ b/kde-base/kde-menu-icons/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kde-menu-icons
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kde-menu-icons/ChangeLog,v 1.8 2008/06/05 21:17:23 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kde-menu-icons/ChangeLog,v 1.9 2008/06/09 14:53:33 keytoaster Exp $
+
+  09 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kde-menu-icons-4.0.2.ebuild, -kde-menu-icons-4.0.3.ebuild:
+  Removed old versions.
 
 *kde-menu-icons-4.0.5 (05 Jun 2008)
 
