--- a/xfce-extra/ristretto/ChangeLog
+++ b/xfce-extra/ristretto/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for xfce-extra/ristretto
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/ristretto/ChangeLog,v 1.35 2008/05/13 23:51:21 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/ristretto/ChangeLog,v 1.36 2008/06/09 14:55:49 angelos Exp $
+
+*ristretto-0.0.20 (09 Jun 2008)
+
+  09 Jun 2008; Christoph Mende <angelos@gentoo.org>
+  -ristretto-0.0.18.ebuild, +ristretto-0.0.20.ebuild:
+  Version bump and drop old
 
 *ristretto-0.0.19 (13 May 2008)
 
