--- a/kde-base/libplasma/ChangeLog
+++ b/kde-base/libplasma/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/libplasma
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/libplasma/ChangeLog,v 1.9 2008/06/05 22:40:00 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/libplasma/ChangeLog,v 1.10 2008/06/09 14:57:25 keytoaster Exp $
+
+  09 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -libplasma-4.0.2.ebuild, -libplasma-4.0.3.ebuild:
+  Removed old versions.
 
 *libplasma-4.0.5 (05 Jun 2008)
 
