--- a/kde-base/solid/ChangeLog
+++ b/kde-base/solid/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/solid
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/solid/ChangeLog,v 1.8 2008/06/05 22:45:40 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/solid/ChangeLog,v 1.9 2008/06/09 14:58:10 keytoaster Exp $
+
+  09 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> -solid-4.0.2.ebuild,
+  -solid-4.0.3.ebuild:
+  Removed old versions.
 
 *solid-4.0.5 (05 Jun 2008)
 
