--- a/sys-libs/com_err/ChangeLog
+++ b/sys-libs/com_err/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/com_err
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/com_err/ChangeLog,v 1.70 2008/06/08 12:11:37 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/com_err/ChangeLog,v 1.71 2008/06/09 15:02:17 armin76 Exp $
+
+  09 Jun 2008; Raúl Porcel <armin76@gentoo.org> com_err-1.40.9.ebuild:
+  ia64/sparc/x86 stable wrt #225239
 
   08 Jun 2008; nixnut <nixnut@gentoo.org> com_err-1.40.9.ebuild:
   Stable on ppc wrt bug 225239
