--- a/kde-base/kwallet/ChangeLog
+++ b/kde-base/kwallet/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kwallet
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kwallet/ChangeLog,v 1.9 2008/06/05 22:32:31 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kwallet/ChangeLog,v 1.10 2008/06/09 15:07:18 keytoaster Exp $
+
+  09 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kwallet-4.0.2.ebuild, -kwallet-4.0.3.ebuild:
+  Removed old versions.
 
 *kwallet-4.0.5 (05 Jun 2008)
 
