--- a/sys-libs/ss/ChangeLog
+++ b/sys-libs/ss/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/ss
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/ss/ChangeLog,v 1.65 2008/06/09 02:31:16 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/ss/ChangeLog,v 1.66 2008/06/09 15:11:27 armin76 Exp $
+
+  09 Jun 2008; Raúl Porcel <armin76@gentoo.org> ss-1.40.9.ebuild:
+  ia64/sparc/x86 stable wrt #225239
 
   09 Jun 2008; Mike Frysinger <vapier@gentoo.org> ss-1.40.10.ebuild:
   Use linker scripts like e2fsprogs #225297 by Mart Raudsepp.
