--- a/kde-base/soliduiserver/ChangeLog
+++ b/kde-base/soliduiserver/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/soliduiserver
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/soliduiserver/ChangeLog,v 1.8 2008/06/05 22:46:08 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/soliduiserver/ChangeLog,v 1.9 2008/06/09 15:13:39 keytoaster Exp $
+
+  09 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -soliduiserver-4.0.2.ebuild, -soliduiserver-4.0.3.ebuild:
+  Removed old versions.
 
 *soliduiserver-4.0.5 (05 Jun 2008)
 
