--- a/kde-base/kdessh/ChangeLog
+++ b/kde-base/kdessh/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdessh
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdessh/ChangeLog,v 1.9 2008/06/05 21:38:06 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdessh/ChangeLog,v 1.10 2008/06/09 15:16:09 keytoaster Exp $
+
+  09 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> -kdessh-4.0.2.ebuild,
+  -kdessh-4.0.3.ebuild:
+  Removed old versions.
 
 *kdessh-4.0.5 (05 Jun 2008)
 
