--- a/kde-base/plasma/ChangeLog
+++ b/kde-base/plasma/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/plasma
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/plasma/ChangeLog,v 1.11 2008/06/05 22:44:39 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/plasma/ChangeLog,v 1.12 2008/06/09 15:24:36 keytoaster Exp $
+
+  09 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> -plasma-4.0.2.ebuild,
+  -plasma-4.0.3.ebuild:
+  Removed old versions.
 
 *plasma-4.0.5 (05 Jun 2008)
 
