--- a/dev-php5/magickwand/ChangeLog
+++ b/dev-php5/magickwand/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-php5/magickwand
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/magickwand/ChangeLog,v 1.7 2008/06/08 13:31:32 hoffie Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/magickwand/ChangeLog,v 1.8 2008/06/09 15:33:53 hoffie Exp $
+
+  09 Jun 2008; Christian Hoffmann <hoffie@gentoo.org>
+  +files/imagemagick-pre-6.3.8-compat.patch, magickwand-1.0.7.ebuild:
+  adding patch by Martin von Gagern <Martin.vGagern@gmx.net> (bug 215671) to
+  allow for building against <imagemagick-6.3.8 again and adjust *DEPEND
+  accordingly
 
   08 Jun 2008; Christian Hoffmann <hoffie@gentoo.org>
   magickwand-1.0.7.ebuild:
