--- a/kde-base/strigi-analyzer/ChangeLog
+++ b/kde-base/strigi-analyzer/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/strigi-analyzer
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/strigi-analyzer/ChangeLog,v 1.9 2008/06/05 22:46:36 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/strigi-analyzer/ChangeLog,v 1.10 2008/06/09 15:35:18 keytoaster Exp $
+
+  09 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -strigi-analyzer-4.0.2.ebuild, -strigi-analyzer-4.0.3.ebuild:
+  Removed old versions.
 
 *strigi-analyzer-4.0.5 (05 Jun 2008)
 
