--- a/sys-fs/btrfs/ChangeLog
+++ b/sys-fs/btrfs/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-fs/btrfs
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/btrfs/ChangeLog,v 1.4 2008/06/07 16:38:35 lavajoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/btrfs/ChangeLog,v 1.5 2008/06/09 17:01:34 lavajoe Exp $
+
+*btrfs-9999 (09 Jun 2008)
+
+  09 Jun 2008; Joe Peterson <lavajoe@gentoo.org> btrfs-0.15-r1.ebuild,
+  +btrfs-9999.ebuild:
+  Add live ebuild (based on ebuild from ToeiRei); fix warning formatting
 
 *btrfs-0.15-r1 (07 Jun 2008)
 
