--- a/sys-fs/btrfs/ChangeLog
+++ b/sys-fs/btrfs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-fs/btrfs
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/btrfs/ChangeLog,v 1.5 2008/06/09 17:01:34 lavajoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/btrfs/ChangeLog,v 1.6 2008/06/09 18:03:12 lavajoe Exp $
+
+  09 Jun 2008; Joe Peterson <lavajoe@gentoo.org> btrfs-9999.ebuild:
+  Use unstable repo for live ebuild
 
 *btrfs-9999 (09 Jun 2008)
 
