--- a/profiles/default-linux/alpha/ChangeLog
+++ b/profiles/default-linux/alpha/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo/x86 profile directory
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/default-linux/alpha/ChangeLog,v 1.98 2008/05/25 18:16:34 klausman Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/default-linux/alpha/ChangeLog,v 1.99 2008/06/09 18:42:19 armin76 Exp $
+
+  09 Jun 2008; Raúl Porcel <armin76@gentoo.org> 2007.0/package.mask,
+  package.mask:
+  Move gnome unmask to 2007.0, since 2006.1 can't have it
 
   25 May 2008; Tobias Klausmann <klausman@gentoo.org> package.mask:
   libggi compiles on alpha these days
