--- a/dev-lang/squeak/ChangeLog
+++ b/dev-lang/squeak/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-lang/squeak
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/squeak/ChangeLog,v 1.26 2008/06/09 17:55:03 araujo Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/squeak/ChangeLog,v 1.27 2008/06/09 19:24:37 araujo Exp $
+
+  09 Jun 2008; Luis F. Araujo <araujo@gentoo.org> squeak-3.7.7-r1.ebuild,
+  squeak-3.9.7.ebuild:
+  Bye libffi...
 
 *squeak-3.10 (09 Jun 2008)
 
