--- a/app-cdr/serpentine/ChangeLog
+++ b/app-cdr/serpentine/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-cdr/serpentine
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/serpentine/ChangeLog,v 1.20 2008/06/08 17:44:20 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/serpentine/ChangeLog,v 1.21 2008/06/09 19:34:40 opfer Exp $
+
+  09 Jun 2008; Christian Faulhammer <opfer@gentoo.org>
+  serpentine-0.9-r2.ebuild:
+  stable x86, bug 218112
 
 *serpentine-0.9-r2 (08 Jun 2008)
 
