--- a/dev-php5/pecl-gnupg/ChangeLog
+++ b/dev-php5/pecl-gnupg/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-php5/pecl-gnupg
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/pecl-gnupg/ChangeLog,v 1.1 2007/08/30 13:04:07 jokey Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/pecl-gnupg/ChangeLog,v 1.2 2008/06/09 19:40:02 swegener Exp $
+
+  09 Jun 2008; Sven Wegener <swegener@gentoo.org> pecl-gnupg-1.3.1.ebuild:
+  Set RDEPEND="${DEPEND}"
 
 *pecl-gnupg-1.3.1 (30 Aug 2007)
 
