--- a/app-portage/gatt/ChangeLog
+++ b/app-portage/gatt/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-portage/gatt
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/gatt/ChangeLog,v 1.9 2008/06/04 01:56:50 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/gatt/ChangeLog,v 1.10 2008/06/09 19:51:49 opfer Exp $
+
+*gatt-0.6.1 (09 Jun 2008)
+
+  09 Jun 2008; Christian Faulhammer <opfer@gentoo.org> +gatt-0.6.1.ebuild:
+  version bump, just a maintenance release
 
   04 Jun 2008; Jeroen Roovers <jer@gentoo.org> gatt-0.6.0.ebuild:
   Marked ~hppa too.
