--- a/net-im/jabberd/ChangeLog
+++ b/net-im/jabberd/ChangeLog
@@ -1,6 +1,16 @@
 # ChangeLog for net-im/jabberd
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/jabberd/ChangeLog,v 1.103 2008/05/21 18:55:06 dev-zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/jabberd/ChangeLog,v 1.104 2008/06/09 20:22:03 nelchael Exp $
+
+*jabberd-1.6.1.1 (09 Jun 2008)
+
+  09 Jun 2008; Krzysiek Pawlik <nelchael@gentoo.org>
+  +files/jabberd-1.6.1.1-gnutls2.2.patch,
+  +files/jabberd-1.6.1.1-parallel-make.patch,
+  +files/jabberd-1.6.1.1-sandbox.patch, metadata.xml,
+  jabberd-1.4.4-r3.ebuild, +jabberd-1.6.1.1.ebuild:
+  Version bump, ebuild by Thomas Anderson <gentoofan23@gmail.com>, see bug
+  #200616.
 
   21 May 2008; Tiziano Müller <dev-zero@gentoo.org>
   jabberd-1.4.4-r3.ebuild:
