--- a/dev-db/mysql-gui-tools/ChangeLog
+++ b/dev-db/mysql-gui-tools/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-db/mysql-gui-tools
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/mysql-gui-tools/ChangeLog,v 1.24 2008/04/11 18:38:28 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/mysql-gui-tools/ChangeLog,v 1.25 2008/06/09 21:07:49 swegener Exp $
+
+  09 Jun 2008; Sven Wegener <swegener@gentoo.org>
+  +files/mysql-gui-tools-5.0_p12-gcc-4.3.patch,
+  mysql-gui-tools-5.0_p12-r2.ebuild:
+  Add compability with gcc-4.3.
 
   11 Apr 2008; Sven Wegener <swegener@gentoo.org>
   +files/mysql-gui-tools-5.0_p12-libsigc++-2.2.patch,
