--- a/net-misc/l7-filter/ChangeLog
+++ b/net-misc/l7-filter/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/l7-filter
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/l7-filter/ChangeLog,v 1.58 2008/02/15 13:07:31 fmccor Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/l7-filter/ChangeLog,v 1.59 2008/06/09 22:18:43 dragonheart Exp $
+
+*l7-filter-2.18 (09 Jun 2008)
+
+  09 Jun 2008; Daniel Black <dragonheart@gentoo.org> +l7-filter-2.18.ebuild:
+  version bump as per bug #225543 thanks to Ben Schweikert
 
   15 Feb 2008; Ferris McCormick <fmccor@gentoo.org> l7-filter-2.17.ebuild:
   Sparc stable, Bug #208148 --- it does patch the kernel source.
