--- a/dev-libs/libxml/ChangeLog
+++ b/dev-libs/libxml/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libxml
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libxml/ChangeLog,v 1.20 2007/05/14 20:18:59 bangert Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libxml/ChangeLog,v 1.21 2008/06/09 23:01:00 darkside Exp $
+
+  09 Jun 2008; Jeremy Olexa <darkside@gentoo.org> libxml-1.8.17-r2.ebuild:
+  Fix dep on dev-util/gtk-doc-1. bug #221719, thanks to flameeyes for reporting
 
   14 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
   add <herd>no-herd</herd>
