--- a/dev-libs/tomsfastmath/ChangeLog
+++ b/dev-libs/tomsfastmath/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/tomsfastmath
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/tomsfastmath/ChangeLog,v 1.4 2006/10/22 04:04:07 vapier Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/tomsfastmath/ChangeLog,v 1.5 2008/06/10 02:10:45 darkside Exp $
+
+*tomsfastmath-0.12 (10 Jun 2008)
+
+  10 Jun 2008; Jeremy Olexa <darkside@gentoo.org> +tomsfastmath-0.12.ebuild:
+  Version bump, bug #159163. Changed HOMEPAGE/SRC_URI. Dropped patch from 0.05
+  version as it doesn't apply anymore.
 
   22 Oct 2006; Mike Frysinger <vapier@gentoo.org>
   +files/tomsfastmath-0.05-asm-relax-x86.patch, tomsfastmath-0.05.ebuild:
